RDT3-249 Added route to create discourse topics.
